upload all files

--- a/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html
+++ b/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html
@@ -240,8 +240,8 @@
 
       <!-- Features (Icon card grid 3x2 / 2x3 / 1x6) -->
       <section id="features" class="reveal section-block features" aria-labelledby="features-h">
-        <h2 id="features-h" class="section" data-i18n-key="features_h">Feature cards / Icon card grid</h2>
-        <p class="lead" data-i18n-key="features_lead">6 ไฮไลต์หลัก — 3×2 บนเดสก์ท็อป / 2×3 บนแท็บเล็ต / 1×6 บนมือถือ</p>
+        <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของน้ำยา</h2>
+        <p class="lead" data-i18n-key="features_lead">สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป</p>
 
         <div class="features__grid">
 
@@ -483,8 +483,8 @@
         intro_p1:"การชุบทองเหลืองแบบไม่ใช้ไซยาไนด์ คือกระบวนการชุบที่ใช้สารเชิงซ้อนชนิดปลอดภัย (เช่น ไพโรฟอสเฟต/ซิเตรต/ไกลซีน) แทนไซยาไนด์ เพื่อละลาย Cu/Zn และสร้างฟิล์มทองเหลืองที่มีคุณภาพ เหมาะสำหรับงานตกแต่ง อะไหล่ยานยนต์ เครื่องประดับ และชิ้นส่วนโลหะทั่วไป",
         intro_p2:"จุดมุ่งหมายคือคงคุณภาพการยึดเกาะและการคุมโทนสีของทองเหลือง พร้อมยกระดับความปลอดภัยและลดภาระบำบัดน้ำเสียเมื่อเทียบกับระบบไซยาไนด์ดั้งเดิม",
 
-        features_h:"Feature cards / Icon card grid",
-        features_lead:"6 ไฮไลต์หลัก — 3×2 บนเดสก์ท็อป / 2×3 บนแท็บเล็ต / 1×6 บนมือถือ",
+        features_h:"จุดเด่นของน้ำยา",
+        features_lead:"สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป",
         feat_1_t:"ไม่มีไซยาไนด์",
         feat_1_d:"ลดความเสี่ยงด้าน EHS และภาระบำบัดน้ำเสีย เมื่อเทียบกับระบบ CN",
         feat_2_t:"คุมโทนกว้าง",
@@ -611,8 +611,8 @@
         intro_p1:"Non-cyanide brass plating replaces CN with safer complexers (e.g., pyrophosphate/citrate/glycine) to dissolve Cu/Zn and produce quality brass films for decorative parts, auto hardware, jewelry, and general metal finishing.",
         intro_p2:"The target is to retain adhesion and tone control while improving safety and reducing wastewater burden compared with legacy cyanide systems.",
 
-        features_h:"Feature cards / Icon card grid",
-        features_lead:"Six key benefits — 3×2 desktop / 2×3 tablet / 1×6 mobile",
+        features_h:"Key features of the solution",
+        features_lead:"A summary of the key characteristics for a plating line, including surface quality, stability, and readiness for the next process.",
         feat_1_t:"Cyanide-free",
         feat_1_d:"Lower EHS risk and simpler wastewater treatment than CN systems.",
         feat_2_t:"Wide tone control",
