--- a/products/platingcoating/copperplating/troubleshootingacidcopper/index.html
+++ b/products/platingcoating/copperplating/troubleshootingacidcopper/index.html
@@ -248,8 +248,8 @@
 
       <!-- Features (Icon card grid) -->
       <section id="features" class="reveal section-block features" aria-labelledby="features-h">
-        <h2 id="features-h" class="section" data-i18n-key="features_h">Feature cards / Icon card grid</h2>
-        <p class="lead" data-i18n-key="features_lead">6 ไฮไลต์หลัก — 3×2 เดสก์ท็อป / 2×3 แท็บเล็ต / 1×6 มือถือ</p>
+        <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของน้ำยา</h2>
+        <p class="lead" data-i18n-key="features_lead">สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป</p>
 
         <div class="features__grid">
           <article class="features__item">
@@ -504,7 +504,7 @@
         intro_p2:"กระบวนการนี้ใช้กันอย่างแพร่หลายในงานตกแต่งและอุตสาหกรรมอิเล็กทรอนิกส์ เพราะให้ความมันวาวสูง ปรับผิวให้เรียบเนียน และสร้างความหนาได้รวดเร็ว อย่างไรก็ตามบนเหล็ก/สังกะสี/อะลูมิเนียม ต้องมีชั้นรองพื้นด่างก่อนเสมอเพื่อหลีกเลี่ยงการกัดกร่อนและการยึดเกาะไม่ดี",
 
         features_h:"จุดเด่นของน้ำยา",
-        features_lead:"6 ไฮไลต์หลัก",
+        features_lead:"สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป",
         feat_1_t:"เงาสูงทั่วช่วงกระแส",
         feat_1_d:"ตั้งแต่ LCD ถึง HCD ได้ผิวเงาสม่ำเสมอ ลดความต่างโทน",
         feat_2_t:"ชุบติดดี",
@@ -603,7 +603,7 @@
         intro_p2:"Widely used in decorative and electronics industries for high gloss, surface leveling, and fast thickness build. On Fe/Zn/Al, always apply an alkaline copper strike first to prevent attack and poor adhesion.",
 
         features_h:"Key features of the solution",
-        features_lead:"6 highlights",
+        features_lead:"A summary of the key characteristics for a plating line, including surface quality, stability, and readiness for the next process.",
         feat_1_t:"Bright across current range",
         feat_1_d:"Uniform gloss from LCD to HCD; minimized tone difference",
         feat_2_t:"Strong leveling",
