--- a/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html
+++ b/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html
@@ -246,8 +246,8 @@
 
       <!-- Features (Icon card grid) -->
       <section id="features" class="reveal section-block features" aria-labelledby="features-h">
-        <h2 id="features-h" class="section" data-i18n-key="features_h">Feature cards / Icon card grid</h2>
-        <p class="lead" data-i18n-key="features_lead">6 ไฮไลต์หลัก — 3×2 เดสก์ท็อป / 2×3 แท็บเล็ต / 1×6 มือถือ</p>
+        <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของน้ำยา</h2>
+        <p class="lead" data-i18n-key="features_lead">สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป</p>
 
         <div class="features__grid">
           <article class="features__item">
@@ -548,8 +548,8 @@
         intro_p1:"โดยทั่วไปการชุบทองแดงด่างไม่ได้ออกแบบเพื่อสร้างความหนาหรือความเงาสูง แต่ทำหน้าที่เป็น <strong>ชั้นรองพื้น (Undercoat)</strong> หรือ <strong>ชั้นกาว (Strike)</strong> ที่สำคัญ โดยเฉพาะเมื่อชุบชิ้นงานเหล็กหรือซิงค์ก่อนขึ้นกระบวนการ Acid Copper/Ni/Cr",
         intro_p2:"หากนำเหล็กไปชุบในสารละลายทองแดงแบบกรดโดยตรงจะเกิด <em>displacement reaction</em> ทำให้ทองแดงเกาะแบบหลวมและลอกง่าย สารละลายด่างช่วยป้องกันปฏิกิริยานี้ ทำให้ชั้นทองแดงยึดเกาะแน่นหนา",
 
-        features_h:"Feature cards / Icon card grid",
-        features_lead:"6 ไฮไลต์หลัก — 3×2 เดสก์ท็อป / 2×3 แท็บเล็ต / 1×6 มือถือ",
+        features_h:"จุดเด่นของน้ำยา",
+        features_lead:"สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป",
         feat_1_t:"ยึดเกาะยอดเยี่ยมบนเหล็ก/ซิงค์",
         feat_1_d:"ป้องกันการลอกจากปฏิกิริยาแทนที่ สร้างฐานก่อนชุบถัดไป",
         feat_2_t:"Throwing Power สูง",
@@ -640,8 +640,8 @@
         intro_p1:"Alkaline copper strike is not intended to build thickness or mirror-brightness; it serves as a <strong>bonding undercoat (Strike)</strong>, especially for steel or zinc parts before Acid Copper/Ni/Cr.",
         intro_p2:"Direct plating steel in acid copper causes a <em>displacement reaction</em>, yielding weak, flaky copper. The alkaline electrolyte prevents this, enabling strong adhesion.",
 
-        features_h:"Feature cards / Icon card grid",
-        features_lead:"6 highlights — 3×2 desktop / 2×3 tablet / 1×6 mobile",
+        features_h:"Key features of the solution",
+        features_lead:"A summary of the key characteristics for a plating line, including surface quality, stability, and readiness for the next process.",
         feat_1_t:"Excellent adhesion on steel/zinc",
         feat_1_d:"Prevents displacement peeling; reliable base for next layers",
         feat_2_t:"High throwing power",
