--- a/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html
+++ b/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html
@@ -249,7 +249,7 @@
       <!-- Features (Icon card grid) -->
       <section id="features" class="reveal section-block features" aria-labelledby="features-h">
         <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของน้ำยา</h2>
-        <p class="lead" data-i18n-key="features_lead">6 ไฮไลต์หลัก</p>
+        <p class="lead" data-i18n-key="features_lead">สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป</p>
 
         <div class="features__grid">
           <article class="features__item">
@@ -528,7 +528,7 @@
         intro_p2:"จุดประสงค์หลักคือการทดแทนระบบด่างแบบใช้ไซยาไนด์ แต่ยังคงบทบาทเป็น ชั้นรองพื้น/ชั้นกาว ที่ยึดเกาะยอดเยี่ยมสำหรับวัสดุอย่างเหล็กและซิงค์ที่ไม่สามารถชุบทองแดงกรดได้โดยตรง",
 
         features_h:"Feature cards / Icon card grid",
-        features_lead:"6 ไฮไลต์หลัก — 3×2 เดสก์ท็อป / 2×3 แท็บเล็ต / 1×6 มือถือ",
+        features_lead:"สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป",
         feat_1_t:"ปลอดไซยาไนด์", feat_1_d:"ลดความเสี่ยง EHS เทียบระบบ CN บำบัดง่ายขึ้น",
         feat_2_t:"กึ่งเงา–เงา",   feat_2_d:"ผิวสวย เนียน เป็นฐานชั้นต่อได้ดี",
         feat_3_t:"ยึดเกาะยอดเยี่ยม", feat_3_d:"รองรับเหล็ก/ทองเหลือง/ซิงค์ไดคาสต์/บรอนซ์/Al-Zn",
@@ -628,8 +628,8 @@
         intro_p1:"Non-Cyanide Alkaline Copper Plating uses alkaline electrolyte with no cyanide, replacing legacy hazardous systems.",
         intro_p2:"It remains a high-adhesion undercoat/strike for steel and zinc that cannot be directly plated in acid copper.",
 
-        features_h:"Feature cards / Icon card grid",
-        features_lead:"Six highlights — 3×2 desktop / 2×3 tablet / 1×6 mobile",
+        features_h:"Key features of the solution",
+        features_lead:"A summary of the key characteristics for a plating line, including surface quality, stability, and readiness for the next process.",
         feat_1_t:"Non-cyanide", feat_1_d:"Lower EHS risk vs CN; easier effluent treatment.",
         feat_2_t:"Semi-bright to bright", feat_2_d:"Smooth finish; ideal base for subsequent layers.",
         feat_3_t:"Excellent adhesion", feat_3_d:"Works with steel/brass/Zn die-cast/bronze/Al-Zn.",
