--- a/products/platingcoating/cyanide-free-white-bronze/index.html
+++ b/products/platingcoating/cyanide-free-white-bronze/index.html
@@ -230,8 +230,8 @@
 
       <!-- Features (Icon card grid) -->
       <section id="features" class="reveal section-block features" aria-labelledby="features-h">
-        <h2 id="features-h" class="section" data-i18n-key="features_h">Feature cards / Icon card grid</h2>
-        <p class="lead" data-i18n-key="features_lead">6 ไฮไลต์หลัก — 3×2 เดสก์ท็อป / 2×3 แท็บเล็ต / 1×6 มือถือ</p>
+        <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของน้ำยา</h2>
+        <p class="lead" data-i18n-key="features_lead">สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป</p>
 
         <div class="features__grid">
           <article class="features__item">
@@ -551,8 +551,8 @@
         toc_troubleshooting: "แนวทางแก้ปัญหา",
 
         /* Features */
-        features_h: "Feature cards / Icon card grid",
-        features_lead: "6 ไฮไลต์หลัก — 3×2 เดสก์ท็อป / 2×3 แท็บเล็ต / 1×6 มือถือ",
+        features_h: "จุดเด่นของน้ำยา",
+        features_lead: "สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป",
         feat_1_t: "เงาสว่างสม่ำเสมอ LCD→HCD",
         feat_1_d: "ผิวเงินสว่าง เรียบ คุมโทนคงที่แม้พื้นที่กระแสต่างกัน",
         feat_2_t: "ทนกัดกร่อน",
@@ -724,8 +724,8 @@
         toc_troubleshooting: "Troubleshooting",
 
         /* Features */
-        features_h: "Feature cards / Icon card grid",
-        features_lead: "6 highlights — 3×2 desktop / 2×3 tablet / 1×6 mobile",
+        features_h: "Key features of the solution",
+        features_lead: "A summary of the key characteristics for a plating line, including surface quality, stability, and readiness for the next process.",
         feat_1_t: "Uniform brightness LCD→HCD",
         feat_1_d: "Bright silver appearance, consistent tone across current densities",
         feat_2_t: "Corrosion resistant",
