--- a/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html
+++ b/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html
@@ -242,8 +242,8 @@
 
       <!-- Features (Icon card grid) -->
       <section id="features" class="reveal section-block features" aria-labelledby="features-h">
-        <h2 id="features-h" class="section" data-i18n-key="features_h">Feature cards / Icon card grid</h2>
-        <p class="lead" data-i18n-key="features_lead">6 ไฮไลต์หลัก — 3×2 เดสก์ท็อป / 2×3 แท็บเล็ต / 1×6 มือถือ</p>
+        <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของน้ำยา</h2>
+        <p class="lead" data-i18n-key="features_lead">สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป</p>
 
         <div class="features__grid">
           <article class="features__item">
@@ -457,8 +457,8 @@
         intro_p1:"การชุบแลคเกอร์ไฟฟ้าอะคริลิค (Electro-deposition Coating: EDP/E-coat) ใช้ไฟฟ้ากระแสตรงดึงพอลิเมอร์อะคริลิคที่มีประจุให้ไปเกาะบนชิ้นงานที่ต่อขั้วตรงข้าม เกิดเป็นฟิล์มใสเรียบสม่ำเสมอทั่วทั้งชิ้น—even ในร่องหรือมุม—พร้อมควบคุมความหนาได้แม่นยำ",
         intro_p2:"ข้อดีหลักคือความสม่ำเสมอ ความทนกัดกร่อน การใช้วัสดุคุ้มค่า และความเป็นมิตรต่อสิ่งแวดล้อม (ปราศจากโลหะหนัก) เหมาะกับเครื่องประดับ ชิ้นส่วนตกแต่ง และงานที่ต้องการเคลือบใสคุณภาพสูง",
 
-        features_h:"Feature cards / Icon card grid",
-        features_lead:"6 ไฮไลต์หลัก — 3×2 เดสก์ท็อป / 2×3 แท็บเล็ต / 1×6 มือถือ",
+        features_h:"จุดเด่นของน้ำยา",
+        features_lead:"สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป",
         feat_1_t:"ฟิล์มใสเงา สม่ำเสมอ",
         feat_1_d:"คลุมได้ทั่วถึงแม้ในร่อง/มุม ลดส้มผิว และเสถียรต่อโหลดผสม",
         feat_2_t:"ทนกัดกร่อนสูง",
@@ -539,8 +539,8 @@
         intro_p1:"Acrylic electro-deposition coating (EDP/E-coat) uses DC to drive charged acrylic polymers onto the oppositely charged workpiece, forming a clear, continuous film—even in recesses—and enabling precise thickness control.",
         intro_p2:"Benefits include uniformity, corrosion resistance, efficient material usage, and eco-friendliness (no heavy metals). Great for jewelry, decor parts, and any application needing a high-quality clear coat.",
 
-        features_h:"Feature cards / Icon card grid",
-        features_lead:"Six highlights — 3×2 desktop / 2×3 tablet / 1×6 mobile",
+        features_h:"Key features of the solution",
+        features_lead:"A summary of the key characteristics for a plating line, including surface quality, stability, and readiness for the next process.",
         feat_1_t:"Clear, uniform film",
         feat_1_d:"Excellent coverage into recesses; minimizes orange peel and handles mixed loads.",
         feat_2_t:"High corrosion resistance",
