--- a/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html
+++ b/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html
@@ -246,8 +246,8 @@
 
       <!-- Features (Icon card grid) -->
       <section id="features" class="reveal section-block features" aria-labelledby="features-h">
-        <h2 id="features-h" class="section" data-i18n-key="features_h">Feature cards / Icon card grid</h2>
-        <p class="lead" data-i18n-key="features_lead">6 ไฮไลต์หลัก — 3×2 เดสก์ท็อป / 2×3 แท็บเล็ต / 1×6 มือถือ</p>
+        <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของน้ำยา</h2>
+        <p class="lead" data-i18n-key="features_lead">สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป</p>
 
         <div class="features__grid">
           <!-- 1 -->
@@ -547,8 +547,8 @@
         toc_troubleshoot: "การแก้ปัญหา",
         toc_safety: "ความปลอดภัย",
 
-        features_h: "Feature cards / Icon card grid",
-        features_lead: "6 ไฮไลต์หลัก — 3×2 เดสก์ท็อป / 2×3 แท็บเล็ต / 1×6 มือถือ",
+        features_h: "จุดเด่นของน้ำยา",
+        features_lead: "สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป",
         feat_1_t: "ฟิล์มสม่ำเสมอ LCD→HCD",
         feat_1_d: "✨ เงาสม่ำเสมอทั่วช่วงกระแส ตั้งแต่ LCD ถึง HCD ลดปัญหาบริเวณขอบไหม้",
         feat_2_t: "ทนกัดกร่อน",
@@ -687,8 +687,8 @@
         toc_troubleshoot: "Troubleshooting",
         toc_safety: "Safety",
 
-        features_h: "Feature cards / Icon card grid",
-        features_lead: "6 highlights — 3×2 desktop / 2×3 tablet / 1×6 mobile",
+        features_h: "Key features of the solution",
+        features_lead: "A summary of the key characteristics for a plating line, including surface quality, stability, and readiness for the next process.",
         feat_1_t: "Uniform film LCD→HCD",
         feat_1_d: "✨ Consistent gloss across current density, from LCD to HCD; mitigates edge burning.",
         feat_2_t: "Corrosion resistance",
