upload all files

--- a/products/platingcoating/nickelplating/troubleshootingnickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingnickel/index.html
@@ -233,8 +233,8 @@
 
       <!-- Features (Icon card grid) -->
       <section id="features" class="reveal section-block features" aria-labelledby="features-h">
-        <h2 id="features-h" class="section" data-i18n-key="features_h">Feature cards / Icon card grid</h2>
-        <p class="lead" data-i18n-key="features_lead">6 ไฮไลต์หลัก — แสดงเป็นการ์ด 3×2 (เดสก์ท็อป), 2×3 (แท็บเล็ต), 1×6 (มือถือ)</p>
+        <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของน้ำยา</h2>
+        <p class="lead" data-i18n-key="features_lead">สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป</p>
 
         <div class="features__grid">
           <article class="features__item">
@@ -446,8 +446,8 @@
         intro_p1:"การชุบนิกเกิล (Nickel plating) คือกระบวนการทางเคมีไฟฟ้าเคลือบผิวโลหะด้วยชั้นนิกเกิล เพื่อเพิ่มคุณสมบัติ เช่น การทนกัดกร่อน ความแข็ง ความทนสึก และความสวยงาม โดยให้กระแสไฟผ่านสารละลายที่มีไอออนนิกเกิล ทำให้โลหะนิกเกิลตกเคลือบที่ชิ้นงานขั้วลบ (Cathode)",
         intro_p2:"ประเภทหลักมี 2 แบบ: ชุบนิกเกิลด้วยไฟฟ้า (Electroplating) และ ชุบนิกเกิลแบบไร้ไฟฟ้า (Electroless Nickel; EN/Ni-P) ซึ่งให้ความหนาสม่ำเสมอในรู/ซอกโดยไม่ใช้ไฟฟ้า",
 
-        features_h:"Feature cards / Icon card grid",
-        features_lead:"6 ไฮไลต์หลัก — แสดงเป็นการ์ด 3×2 (เดสก์ท็อป), 2×3 (แท็บเล็ต), 1×6 (มือถือ)",
+        features_h:"จุดเด่นของน้ำยา",
+        features_lead:"สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป",
         feat_1_t:"เงาสูงทั่วช่วงกระแส", feat_1_d:"ตั้งแต่ LCD ถึง HCD ให้ผิวเงาเนียน สม่ำเสมอ",
         feat_2_t:"ครอบคลุมซอกลึก", feat_2_d:"การกระจายตัวดีเยี่ยม บริเวณรู/ร่องลึกเคลือบได้ทั่วถึง",
         feat_3_t:"ฐานทนกัดกร่อน", feat_3_d:"ชั้นนิกเกิลช่วยปกป้องสนิมและความชื้น",
@@ -487,8 +487,8 @@
         intro_p1:"Nickel electroplating deposits Ni on cathodic workpieces to improve corrosion resistance, hardness, wear, and appearance.",
         intro_p2:"Two main types: Electroplating and Electroless Nickel (EN/Ni-P) for uniform coverage in recesses without electricity.",
 
-        features_h:"Feature cards / Icon card grid",
-        features_lead:"Six key highlights — responsive 3×2 / 2×3 / 1×6.",
+        features_h:"Key features of the solution",
+        features_lead:"A summary of the key characteristics for a plating line, including surface quality, stability, and readiness for the next process.",
         feat_1_t:"High gloss across current range", feat_1_d:"Uniform brightness from LCD to HCD.",
         feat_2_t:"Recess coverage", feat_2_d:"Excellent throwing power into holes/grooves.",
         feat_3_t:"Corrosion base layer", feat_3_d:"Ni layer protects against rust and moisture.",
