upload all files

--- a/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title data-i18n-key="title">BLACK NICKEL SALT — เกลือนิเกิ้ลดำ | Baume Chemical Blog</title>
+  <title data-i18n-key="title">Black Nickel Salt — เกลือนิเกิ้ลดำ | Baume Chemical Blog</title>
 
   <!-- SEO base -->
-  <meta name="description" content="BLACK NICKEL SALT เกลือนิเกิ้ลดำสำหรับผสมน้ำยาชุบนิกเกิลดำ: หลักการ กระบวนการ คุณสมบัติ การใช้งาน พารามิเตอร์การทำงาน ตัวอย่างสูตรผสม และคำแนะนำการดูแลบ่อ">
+  <meta name="description" content="Black Nickel Salt เกลือนิเกิ้ลดำสำหรับผสมน้ำยาชุบนิกเกิลดำ: หลักการ กระบวนการ คุณสมบัติ การใช้งาน ค่าเบื้องต้นการทำงาน ตัวอย่างสูตรผสม และคำแนะนำการดูแลบ่อ">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/blacknickel/index.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
@@ -19,8 +19,8 @@
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="BLACK NICKEL SALT — เกลือนิเกิ้ลดำ">
-  <meta property="og:description" content="เกลือนิเกิ้ลดำสำหรับการชุบนิกเกิลดำ: จุดเด่น วิธีผสม พารามิเตอร์ และคำแนะนำการใช้งาน">
+  <meta property="og:title" content="Black Nickel Salt — เกลือนิเกิ้ลดำ">
+  <meta property="og:description" content="เกลือนิเกิ้ลดำสำหรับการชุบนิกเกิลดำ: จุดเด่น วิธีผสม ค่าเบื้องต้น และคำแนะนำการใช้งาน">
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/blacknickel/index.html">
   <meta property="og:image" content="https://i.imgur.com/IGRAqiw.jpeg">
   <meta name="twitter:card" content="summary_large_image">
@@ -29,8 +29,8 @@
 {
   "@context": "https://schema.org/",
   "@type": "Product",
-  "name": "BLACK NICKEL SALT — เกลือนิเกิ้ลดำ",
-  "description": "เกลือนิเกิ้ลดำสำหรับผสมน้ำยาชุบนิกเกิลดำ: หลักการ คุณสมบัติ การใช้งาน พารามิเตอร์ และตัวอย่างสูตรผสม",
+  "name": "Black Nickel Salt — เกลือนิเกิ้ลดำ",
+  "description": "เกลือนิเกิ้ลดำสำหรับผสมน้ำยาชุบนิกเกิลดำ: หลักการ คุณสมบัติ การใช้งาน ค่าเบื้องต้น และตัวอย่างสูตรผสม",
   "image": "https://i.imgur.com/IGRAqiw.jpeg",
   "brand": {"@type": "Brand","name": "Baume Chemical"},
   "category": "Black Nickel Plating",
@@ -205,8 +205,8 @@
   <header class="hero">
     <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/nickelplating/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
-      <h1 data-i18n-key="hero_title">BLACK NICKEL SALT — เกลือนิเกิ้ลดำ</h1>
-      <p data-i18n-key="hero_tagline">สารตั้งต้นสำหรับชุบนิกเกิลดำ: หลักการ คุณสมบัติ พารามิเตอร์ วิธีผสม และคำแนะนำการใช้งาน</p>
+      <h1 data-i18n-key="hero_title">Black Nickel Salt — เกลือนิเกิ้ลดำ</h1>
+      <p data-i18n-key="hero_tagline">สารตั้งต้นสำหรับชุบนิกเกิลดำ: หลักการ คุณสมบัติ ค่าเบื้องต้น วิธีผสม และคำแนะนำการใช้งาน</p>
     </div>
   </header>
 
@@ -230,7 +230,7 @@
         <h2 class="section" data-i18n-key="toc_title">สารบัญ</h2>
         <p>
           <a class="toc-chip" href="#features" data-i18n-key="toc_features">จุดเด่น</a>
-          <a class="toc-chip" href="#params" data-i18n-key="toc_params">พารามิเตอร์</a>
+          <a class="toc-chip" href="#params" data-i18n-key="toc_params">ค่าเบื้องต้น</a>
           <a class="toc-chip" href="#makeup" data-i18n-key="toc_makeup">ตัวอย่างการผสม</a>
           <a class="toc-chip" href="#usage" data-i18n-key="toc_usage">คำแนะนำการใช้งาน</a>
           <a class="toc-chip" href="#maintenance" data-i18n-key="toc_maint">การปรับเติม & ความปลอดภัย</a>
@@ -239,7 +239,7 @@
 
       <!-- Features (Icon card grid) -->
       <section id="features" class="reveal section-block features" aria-labelledby="features-h">
-        <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของ BLACK NICKEL SALT</h2>
+        <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของเกลือนิเกิ้ลดำ</h2>
         <p class="lead" data-i18n-key="features_lead">ผิวดำสวยสม่ำเสมอ ควบคุมโทนได้ ใช้งานได้ทั้งงานตกแต่งและงานเทคนิค</p>
 
         <div class="features__grid">
@@ -275,7 +275,7 @@
               </svg>
             </div>
             <h3 class="features__title" data-i18n-key="feat_3_t">ความสม่ำเสมอสูง</h3>
-            <p class="features__desc" data-i18n-key="feat_3_d">ให้โทนสีสม่ำเสมอบริเวณซอกลึก เมื่อควบคุมพารามิเตอร์ถูกต้อง</p>
+            <p class="features__desc" data-i18n-key="feat_3_d">ให้โทนสีสม่ำเสมอบริเวณซอกลึก เมื่อควบคุมค่าเบื้องต้นถูกต้อง</p>
           </article>
 
           <!-- 4 Tunable tone -->
@@ -319,21 +319,21 @@
 
       <!-- Parameters -->
       <section id="params" class="reveal section-block" aria-labelledby="params-h">
-        <h2 id="params-h" class="section" data-i18n-key="params_h">พารามิเตอร์การทำงาน</h2>
+        <h2 id="params-h" class="section" data-i18n-key="params_h">ค่าเบื้องต้นการทำงาน</h2>
         <p class="lead" data-i18n-key="params_lead">ตั้งค่าเบื้องต้นสำหรับบ่อนิกเกิลดำ (ควรทดสอบ Hull-cell เพื่อยืนยันหน้าต่างการทำงานของหน้างานจริง)</p>
 
         <div class="table">
           <table>
             <thead>
               <tr>
-                <th data-i18n-key="params_th_p">พารามิเตอร์</th>
+                <th data-i18n-key="params_th_p">ค่าเบื้องต้น</th>
                 <th data-i18n-key="params_th_r">ช่วง</th>
                 <th data-i18n-key="params_th_c">ค่ากลาง</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td data-i18n-key="params_comp">BLACK NICKEL SALT</td>
+                <td data-i18n-key="params_comp">เกลือนิเกิ้ลดำ</td>
                 <td>120–150 g/L</td>
                 <td>150 g/L</td>
               </tr>
@@ -482,30 +482,30 @@
   <script>
     const I18N = {
       th: {
-        title:"BLACK NICKEL SALT — เกลือนิเกิ้ลดำ | Baume Chemical Blog",
+        title:"Black Nickel Salt — เกลือนิเกิ้ลดำ | Baume Chemical Blog",
         nav_home:"Home", nav_about:"About us", nav_products:"Products", nav_contact:"Contact Us", nav_blog:"Blog",
         back_home:"← กลับเมนูหลัก",
-        hero_title:"BLACK NICKEL SALT — เกลือนิเกิ้ลดำ",
-        hero_tagline:"สารตั้งต้นสำหรับชุบนิกเกิลดำ: หลักการ คุณสมบัติ พารามิเตอร์ วิธีผสม และคำแนะนำการใช้งาน",
+        hero_title:"Black Nickel Salt — เกลือนิเกิ้ลดำ",
+        hero_tagline:"สารตั้งต้นสำหรับชุบนิกเกิลดำ: หลักการ คุณสมบัติ ค่าเบื้องต้น วิธีผสม และคำแนะนำการใช้งาน",
 
-        toc_title:"สารบัญ", toc_features:"จุดเด่น", toc_params:"พารามิเตอร์", toc_makeup:"ตัวอย่างการผสม", toc_usage:"คำแนะนำการใช้งาน", toc_maint:"การปรับเติม & ความปลอดภัย",
+        toc_title:"สารบัญ", toc_features:"จุดเด่น", toc_params:"ค่าเบื้องต้น", toc_makeup:"ตัวอย่างการผสม", toc_usage:"คำแนะนำการใช้งาน", toc_maint:"การปรับเติม & ความปลอดภัย",
 
         intro_h:"การชุบนิกเกิลดำคืออะไร?",
         intro_p1:"การชุบนิกเกิลดำเป็นกระบวนการทางไฟฟ้าเคมี (Electroplating) โดยมีนิกเกิลซัลเฟตเป็นหลัก ร่วมกับสารประกอบอย่างซิงค์ซัลเฟตหรือแอมโมเนียมซัลเฟต ซึ่งส่งผลต่อเฉดสีและความสม่ำเสมอของผิวเคลือบ สีดำที่ได้มักเป็นผลิตภัณฑ์ร่วมของนิกเกิลกับสังกะสี/ซัลเฟอร์และ/หรือออกไซด์ จึงได้โทนตั้งแต่ดำอมเทาจนถึงดำสนิท ไม่ใช่นิกเกิลบริสุทธิ์ล้วน",
 
-        features_h:"จุดเด่นของ BLACK NICKEL SALT",
+        features_h:"จุดเด่นของเกลือนิเกิ้ลดำ",
         features_lead:"ผิวดำสวยสม่ำเสมอ ควบคุมโทนได้ ใช้งานได้ทั้งงานตกแต่งและงานเทคนิค",
         feat_1_t:"ดำลึก เงา/ด้านได้", feat_1_d:"ได้โทนดำอมเทา → ดำสนิท ปรับผิวด้านเพื่อลดแสงสะท้อนได้",
         feat_2_t:"ลดแสงสะท้อน", feat_2_d:"เหมาะชิ้นส่วนกล้อง เครื่องมือแพทย์ และงานออปติค",
-        feat_3_t:"ความสม่ำเสมอสูง", feat_3_d:"โทนสีคงที่ในซอกลึกเมื่อควบคุมพารามิเตอร์เหมาะสม",
+        feat_3_t:"ความสม่ำเสมอสูง", feat_3_d:"โทนสีคงที่ในซอกลึกเมื่อควบคุมค่าเบื้องต้นให้เหมาะสม",
         feat_4_t:"ปรับโทนด้วย pH/แรงดัน", feat_4_d:"ควบคุมโทนด้วย pH โวลต์ A/dm² และอุณหภูมิ",
         feat_5_t:"รองรับหลายวัสดุ", feat_5_d:"ทองเหลือง/ทองแดงลงได้เลย เหล็กควรมีนิกเกิลเงารองพื้น",
         feat_6_t:"ทนทานเมื่อซีลผิว", feat_6_d:"เพิ่มความทนกัดกร่อนด้วย Topcoat/Sealer",
 
-        params_h:"พารามิเตอร์การทำงาน",
+        params_h:"ค่าเบื้องต้นการทำงาน",
         params_lead:"ตั้งค่าเบื้องต้นสำหรับบ่อนิกเกิลดำ (ตรวจสอบด้วย Hull-cell หน้างานจริง)",
-        params_th_p:"พารามิเตอร์", params_th_r:"ช่วง", params_th_c:"ค่ากลาง",
-        params_comp:"BLACK NICKEL SALT", params_temp:"อุณหภูมิ", params_anode:"ขั้วแอโนด", params_volt:"แรงดัน (V)", params_cd:"ความหนาแน่นกระแส",
+        params_th_p:"ค่าเบื้องต้น", params_th_r:"ช่วง", params_th_c:"ค่ากลาง",
+        params_comp:"Black Nickel Salt", params_temp:"อุณหภูมิ", params_anode:"ขั้วแอโนด", params_volt:"แรงดัน (V)", params_cd:"ความหนาแน่นกระแส",
         params_note:"* ควรกรองแบบหมุนเวียนต่อเนื่อง (10 µm) เพื่อความสม่ำเสมอของชั้นเคลือบ",
 
         makeup_h:"ตัวอย่างการผสมน้ำยา",
@@ -529,7 +529,7 @@
       },
 
       en: {
-        title:"BLACK NICKEL SALT — Baume Chemical Blog",
+        title:"BLACK NICKEL SALT — Black Nickel Salt",
         nav_home:"Home", nav_about:"About us", nav_products:"Products", nav_contact:"Contact Us", nav_blog:"Blog",
         back_home:"← Back to Home",
         hero_title:"BLACK NICKEL SALT — Black Nickel Salt",
@@ -540,7 +540,7 @@
         intro_h:"What is black nickel plating?",
         intro_p1:"Black nickel plating is an electrochemical process based on nickel sulfate with co-additives such as zinc sulfate or ammonium salts. The black color arises from nickel compounds with zinc/sulfur and/or oxides, yielding tones from gray-black to deep black—i.e., not pure nickel.",
 
-        features_h:"BLACK NICKEL SALT Highlights",
+        features_h:"Black Nickel Salt Highlights",
         features_lead:"Uniform deep-black finish with tunable tone for decorative and technical parts.",
         feat_1_t:"Deep black, gloss or matte", feat_1_d:"Tones from gray-black to deep black; matte options for low glare.",
         feat_2_t:"Anti-reflection", feat_2_d:"Good for optics, camera parts, and medical instruments.",
@@ -552,7 +552,7 @@
         params_h:"Operating parameters",
         params_lead:"Starting window for black nickel baths (verify via Hull-cell on site).",
         params_th_p:"Parameter", params_th_r:"Range", params_th_c:"Nominal",
-        params_comp:"BLACK NICKEL SALT", params_temp:"Temperature", params_anode:"Anode", params_volt:"Voltage (V)", params_cd:"Current density",
+        params_comp:"Black Nickel Salt", params_temp:"Temperature", params_anode:"Anode", params_volt:"Voltage (V)", params_cd:"Current density",
         params_note:"* Continuous filtration (10 µm) is recommended for consistent deposits.",
 
         makeup_h:"Make-up examples",
