--- a/products/platingcoating/index.html
+++ b/products/platingcoating/index.html
@@ -261,7 +261,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Copper</span><span class="badge">Conductivity</span></div>
           <h3 data-i18n-key="copper_title">ชุบทองแดง (Copper Plating)</h3>
-          <p data-i18n-key="copper_desc">เพิ่มความนำไฟฟ้า/ความร้อนและการยึดเกาะ เหมาะเป็นชั้นรองก่อนนิกเกิล/โครม ช่วยให้เงา ลดเวลาชุบนิกเกิล และเพิ่มการต้านการกัดกร่อนเมื่อเคลือบโครมทับ</p>
+          <p data-i18n-key="copper_desc">เพิ่มความนำไฟฟ้า/ความร้อนและการยึดเกาะ เหมาะเป็นชั้นรองก่อนนิกเกิล/โครม ช่วยให้ความเงา ลดเวลาชุบนิกเกิล และเพิ่มการต้านการกัดกร่อนเมื่อเคลือบโครมทับ</p>
           <a class="more" href="copperplating/index.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -442,7 +442,7 @@
         nickel_title:"ชุบนิกเกิล (Nickel Plating)",
         nickel_desc:"ทั้งแบบมีไฟฟ้าและไม่ใช้ไฟฟ้า เพิ่มความทนสึกหรอ ทนกัดกร่อน และความแข็ง ผิวขาวเงา เหมาะเป็นชั้นรองก่อนชุบอื่น ใช้ได้ทั้งถังกลิ้งและถังแขวน เกาะเร็ว หนา เงา เข้าได้ถึงซอก",
         copper_title:"ชุบทองแดง (Copper Plating)",
-        copper_desc:"เพิ่มความนำไฟฟ้า/ความร้อนและการยึดเกาะ เหมาะเป็นชั้นรองก่อนนิกเกิล/โครม ช่วยให้เงา ลดเวลาชุบนิกเกิล และเพิ่มการต้านการกัดกร่อนเมื่อเคลือบโครมทับ",
+        copper_desc:"เพิ่มความนำไฟฟ้า/ความร้อนและการยึดเกาะ เหมาะเป็นชั้นรองก่อนนิกเกิล/โครม ช่วยให้ความเงา ลดเวลาชุบนิกเกิล และเพิ่มการต้านการกัดกร่อนเมื่อเคลือบโครมทับ",
         brass_title:"ชุบทองเหลือง (Brass Plating)",
         brass_desc:"สีทองสวยงาม ส่วนใหญ่นิยมใช้กับเครื่องประดับและงานตกแต่งเพื่อเพิ่มความงาม และมักมีการเคลือบแลคเกอร์ทับเพื่อป้องกันการหมองคล้ำและรักษาสีให้คงทน",
         lacquer_title:"แลคเกอร์ไฟฟ้า (Electrolytic Lacquer)",
